<resources>
    <string name="app_name">Info Marvel</string>
    <string name="titulo_super">Encapuchado</string>
    <string name="titulo2">Heroes</string>
    <string name="titulo">AntiHeroes</string>
    <string name="titulo3">Villanos</string>
    <string name="titulo4">Enemigo</string>
    <string name="titulo5">Organizacion</string>
    <string name="nombre">Deadpool</string>
    <string name="informacionprin">Wade Winston Wilson, más conocido como Deadpool, es un personaje ficticio, mercenario, supervillan y antihéroe,que aparece en los cómics publicados por Marvel Comics. Creado por el artista Rob Liefeld y el escritor Fabian Nicieza</string>
    <string name="descrip">Como un mercenario mentalmente inestable y desfigurado, Deadpool apareció originalmente como un villano en el cómic New Mutants, y más tarde en ediciones de X-Force. Desde entonces, el personaje ha protagonizado varias series en curso, y ha compartido títulos con otros personajes, como Cable. Conocido como el "Mercenario Bocón", es famoso por su naturaleza comunicativa y por su tendencia a romper la cuarta pared, un recurso utilizado por los escritores para un efecto humorístico. Deadpool se puede clasificar como un antihéroe del tipo mercenario:"es el mejor ejemplo de antihéroe mercenario de todo el elenco de personajes de Marvel". Es discutible si Deadpool es el más popular de los antihéroes de Marvel, pero lo que nadie discute es que es el más estrambótico, bocazas y políticamente incorrecto.</string>
    <string name="informacionprinspidi">Spider-Man, traducido en ocasiones como el Hombre Araña,es un personaje creado por los estadounidenses Stan Lee y Steve Ditko, e introducido en el cómic Amazing Fantasy n.° 15, publicado por Marvel Comics en agosto de 1962. Se trata de un superhéroe que emplea sus habilidades sobrehumanas, reminiscentes de una araña, para combatir a otros supervillanos que persiguen fines siniestros</string>
    <string name="descripspidi">Si bien posee múltiples versiones alternativas que han propiciado el desarrollo de un multiverso, los orígenes y rasgos principales de Spider-Man han permanecido mayormente invariables con el transcurso del tiempo. Generalmente su identidad secreta es Peter Parker, un joven huérfano neoyorquino que adquiere superpoderes después de ser mordido por una araña radiactiva, y cuya ideología como héroe se ve reflejada primordialmente en la expresión «un gran poder conlleva una gran responsabilidad». Suele ser asociado con una personalidad bromista, amable, inventiva y optimista, lo que le ha llevado a ser catalogado como el «vecino amigable» de cualquiera lo cual, aunado a sus vivencias caracterizadas por los problemas cotidianos, atrajeron el interés del público al contrastar con el arquetipo de superhéroe de la industria.</string>
    <string name="nombrespi">SpiderMan</string>
    <string name="informacionprinloki">Loki (Loki Laufeyson) es un personaje ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. Creado por el escritor Stan Lee, el guionista Larry Lieber y el dibujante Jack Kirby, una versión del personaje apareció por primera vez en Venus #6 (agosto de 1949). La encarnación moderna de Loki apareció por primera vez en Journey into Mystery #85 (octubre de 1962). Él es el hermano adoptado y, a menudo, el hermano de Thor</string>
    <string name="descriploki">Loki es un miembro de la raza de Gigantes de Hielo de Jotunheim, aunque no es un gigante en estatura. Posee atributos físicos equivalentes a un miembro apto de su raza, como fuerza mejorada, resistencia (su metabolismo de Gigante de Hielo le otorga niveles sobrehumanos de resistencia física en prácticamente todas las actividades), velocidad, durabilidad suficiente para resistir balas de alto calibre sin daño, e inmunidad a todas las enfermedades y toxinas conocidas, así como a la resistencia a la magia y al envejecimiento.Loki posee inteligencia a nivel genio y tiene entrenamiento extenso en magia, y posee la habilidad de manipular fuerzas mágicas para una variedad de propósitos: proyección de energía, creación de campos de fuerza, aumentando temporalmente sus propias capacidades físicas, otorgando habilidades sobrehumanas a seres vivos o inanimados objetos, vuelo, hipnosis, lanzamiento de ilusión y teletransportación interdimensional.</string>
    <string name="nombreloki">Loki</string>
    <string name="enedead">Wolverine</string>
    <string name="descenemigdead">Wolverine, cuyo nombre de nacimiento es James Howlett (también conocido como James Logan o simplemente Logan) es un superhéroe ficticio que aparece en los cómics publicados por Marvel Comics, principalmente en asociación con los X-Men.</string>
    <string name="infoemigdead">Es un mutante que posee sentidos afinados a los animales, capacidades físicas mejoradas, poderosa capacidad de regeneración conocida como un factor de curación, y tres garras retráctiles en cada mano. Wolverine ha sido representado de diversas formas como miembro de los X-Men, Alpha Flight, Fuerza-X y Los Vengadores.Su primera aparición la realizó dentro de las páginas del número 180 del cómic The Incredible Hulk, en octubre de 1974, aunque su presentación formal fue en el número siguiente por descuido del guionista (número 181, noviembre de 1974). Además, hizo frecuentes apariciones como invitado en otros cómics de Marvel. En las décadas de 1980 y 1990, los cómics en los que aparecía el personaje de Wolverine llegaron a convertirse en los más vendidos de la editorial</string>
    <string name="organideadnom">X-MEN</string>
    <string name="organideadinfo">Los X-Men, también conocidos como Patrulla-X en España, son un equipo de superhéroes ficticios que aparecen en los cómics estadounidenses publicados por Marvel Comics. Creado por el artista / coautor Jack Kirby y el escritor Stan Lee, los personajes aparecieron por primera vez en The X-Men # 1 (septiembre de 1963) en la Edad de Plata de los cómics y formaron una de las franquicias más reconocidas y exitosas de Marvel Comics, apareciendo en numerosos libros, series animadas, películas, videojuegos, tarjetas, juguetes y otros coleccionables. El éxito de esta franquicia es tan grande, que su segundo título editorial, X-Men, de 1991, se convirtió en el cómic más vendido de todos los tiempos</string>
    <string name="eneloki">Kang El Conquistador</string>
    <string name="descenemigloki">Kang el Conquistador (Nathaniel Richards) es un supervillano ficticio que aparece en los cómics estadounidenses publicados por Marvel Comics. El personaje se representa con mayor frecuencia como un oponente de Los Vengadores, Los 4 Fantásticos, X-Men y a veces se une a los Seis Siniestros para atrapar al Hombre Araña.</string>
    <string name="infoemigloki">Una entidad que viaja en el tiempo, varias versiones alternativas de Kang han aparecido en los títulos de Marvel a lo largo de años, incluidos sus respectivos seres heroicos futuros y pasados, Immortus e Iron Lad. En 2009, Kang fue clasificado como el 65º villano de cómics más grande de todos los tiempos por IGN.Kang ha sido descrito como uno de los villanos más notables y poderosos de Marvel. Kang ha aparecido en los medios de comunicación en televisión animada y videojuegos. Hizo su debut en Ant-Man and the Wasp: Quantumania (2023) en el Universo Cinematográfico de Marvel y será el villano del Hombre Hormiga y la Avispa, interpretado por Jonathan Majors, quien repetirá por última vez en su papel para Avengers: The Kang Dynasty (2025) y para Avengers: Secret Wars (2026) y será el villano de Los Vengadores. Además, una versión alternativa de Kang conocida como El "Aquel que permanece", también interpretado por Majors, apareció en el episodio de Loki llamada El "Eternamente Siempre" (2021).</string>
    <string name="organilokinom">Asgard</string>
    <string name="organilokiinfo">Asgard es un reino ficticio y su ciudad capital aparece en los cómics estadounidenses publicados por Marvel Comics. Basado en el reino del mismo nombre de la mitología nórdica. Asgard es el hogar de los asgardianos y otros seres adaptados de la mitología nórdica. Asgard apareció por primera vez en Journey into Mystery (octubre de 1962) creado por Stan Lee, Larry Lieber y Jack Kirby, y ocupa un lugar destacado en las historias que siguen al superhéroe Thor.</string>
    <string name="enespidi">Los 6 Siniestros</string>
    <string name="infoemigspidi">Los Seis Siniestros son un grupo de supervillanos que aparecen en los cómics de Spider-Man publicados por Marvel Comics. Se extraen de la lista de enemigos de Spider-Man. La encarnación original del grupo fue organizado por el Doctor Octopus y estaba formado por Buitre, Electro, Mysterio, Hombre de Arena y Kraven el Cazador. Si bien el equipo ha tenido diferentes miembros en sus diversas iteraciones a lo largo de los años, el Doctor Octopus generalmente siguió siendo el líder en todas las versiones. A partir de esta unión, vinieron otras muchas, con diferentes líderes y componentes, entre ellas cabe destacar a los Doce Siniestros.</string>
    <string name="desenespidi">Después de sufrir tres derrotas consecutivas de Spider-Man, el Doctor Octopus está separado de su paquete de tentáculos. Después de que su paquete de tentáculos se libera y ayuda al Doctor Octopus a salir de la prisión, se pone en contacto con todos los supervillanos conocidos que se cruzaron con Spider-Man. Siendo Buitre, Electro, Kraven el cazador, Mysterio y Hombre de Arena responden. Como ninguno de los miembros está dispuesto a renunciar al honor de matar a Spider-Man, deciden desafiar a Spider-Man individualmente con el orden en que lo enfrentan determinado por sorteo al azar. Los Seis Siniestros secuestran a la Tía May y a la secretaria de Daily Bugle, Betty Brant, manteniéndolas como rehenes para obligar a Spider-Man a enfrentarlos. Spider-Man derrota a los Seis Siniestros uno por uno, burlándose de su decisión de luchar contra él individualmente en lugar de como equipo</string>
    <string name="organispidinom">Vengadores</string>
    <string name="organispidiinfo">Los Vengadores (en inglés Avengers; Invencibles del siglo XX en antiguas traducciones de México realizadas por Editorial La Prensa) son un equipo ficticio de superhéroes que aparecen en los cómics estadounidenses publicados por Marvel Comics. El equipo hizo su debut en The Avengers #1 (septiembre de 1963), creado por el escritor y editor[cita requerida] Stan Lee y el dibujante/coguionista Jack Kirby. Llamados los Héroes más poderosos de la Tierra, los Vengadores originalmente consistían en Ant-Man, Hulk, Iron Man, Thor y Avispa. Ant-Man se convirtió en Giant-Man por el número 2. El Capitán América original fue descubierto atrapado en hielo en el número 4, y se unió al grupo después de que lo revivieran. Una lista rotativa se convirtió en un sello distintivo de la serie, aunque un tema se mantuvo constante: los Vengadores luchan «contra enemigos que ningún superhéroe por sí solo podría derrotar». El equipo, famoso por su grito de batalla de «¡Vengadores unidos!», ha incluido a humanos, mutantes, inhumanos, androides, alienígenas, seres sobrenaturales e incluso antiguos villanos</string>
    <string name="imagen_organizacion_spiderman">Imagen Organizacion Spiderman</string>
    <string name="volver">Volver</string>
    <string name="deadpoolimagen">DeadpoolImagen</string>
    <string name="enemigo_principal">Enemigo Principal</string>
    <string name="organizacion">Organizacion</string>
    <string name="enemigoloki">EnemigoLoki</string>
    <string name="imagenwolverine">ImagenWolverine</string>
    <string name="_6_siniestros_imagen">6 siniestros Imagen</string>
    <string name="imagenloki">ImagenLoki</string>
    <string name="organizacionloki">OrganizacionLoki</string>
    <string name="organizaciondeadpool">OrganizacionDeadpool</string>
    <string name="imagenspiderman">ImagenSpiderman</string>
    <string name="y">Y</string>
</resources>