<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loki">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-33dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                style="@style/nombre"
                android:layout_width="71dp"
                android:layout_height="27dp"
                android:layout_marginTop="16dp"
                android:text="@string/nombreloki"
                android:textColor="#689F38"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                style="@style/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:text="@string/titulo3"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                style="@style/texto"
                android:layout_width="244dp"
                android:layout_height="199dp"
                android:layout_marginTop="144dp"
                android:layout_marginEnd="20dp"
                android:text="@string/informacionprinloki"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TextSizeCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="156dp"
                android:layout_height="110dp"
                android:layout_marginTop="176dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/loki"
                android:contentDescription="@string/imagenloki" />

            <TextView
                android:id="@+id/textView4"
                style="@style/texto"
                android:layout_width="426dp"
                android:layout_height="343dp"
                android:layout_marginTop="344dp"
                android:text="@string/descriploki"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TextSizeCheck"
                tools:layout_editor_absoluteX="14dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="151dp"
                android:layout_height="54dp"
                android:layout_marginTop="12dp"
                android:onClick="eneloki"
                android:text="@string/enemigo_principal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.119"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/button2"
                android:layout_width="154dp"
                android:layout_height="52dp"
                android:layout_marginTop="12dp"
                android:onClick="orgaloki"
                android:text="@string/organizacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.933"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="volver"
                android:text="@string/volver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>