<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="139dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="151dp"
                android:layout_height="132dp"
                android:layout_marginTop="204dp"
                android:contentDescription="@string/nombrespi"
                android:onClick="deadpool"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/deaddpool"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView12"
                style="@style/titulo"
                android:layout_width="175dp"
                android:layout_height="49dp"
                android:layout_marginTop="136dp"
                android:onClick="spidi"
                android:text="@string/nombrespi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.547"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="136dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:contentDescription="@string/imagenspiderman"
                android:onClick="spidi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:srcCompat="@drawable/spiderman" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="151dp"
                android:layout_height="132dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/enemigoloki"
                android:onClick="loki"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/lokilog" />

            <TextView
                android:id="@+id/textView13"
                style="@style/titulo"
                android:layout_width="118dp"
                android:layout_height="48dp"
                android:layout_marginTop="92dp"
                android:onClick="loki"
                android:text="@string/nombreloki"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.539"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                style="@style/titulo"
                android:layout_width="151dp"
                android:layout_height="48dp"
                android:layout_marginTop="252dp"
                android:layout_marginEnd="44dp"
                android:onClick="deadpool"
                android:text="@string/nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                style="@style/titulo"
                android:layout_width="182dp"
                android:layout_height="32dp"
                android:layout_marginTop="28dp"
                android:text="@string/titulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                style="@style/titulo"
                android:layout_width="137dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:text="@string/titulo2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.788"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView9"
                style="@style/titulo"
                android:layout_width="46dp"
                android:layout_height="36dp"
                android:text="@string/y"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView14"
                style="@style/titulo"
                android:layout_width="144dp"
                android:layout_height="38dp"
                android:layout_marginTop="12dp"
                android:text="@string/titulo3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.268"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>